tests/rosetta/out/Smalltalk/averages-mode.out
/tmp/averages-mode.st:8: parse error, expected ']'
